--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -5,16 +5,18 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="#">Start Investing</a></li>
-        <li><a th:href="@{/register}">Raise Capital</a></li>
+        <li><a th:href="@{/raisecapital}">Raise Capital</a></li>
         <li><a href="#">Company</a></li>
         <li><a href="#">Learn</a></li>
       </ul>
     </div>
-
+    
     <div class="right">
       <ul>
-        <li><a th:href="@{/login}">Login</a></li>
+        <li >
+		<li><a th:href="@{/login}">Login</a></li>
         <li><a th:href="@{/register}">Sign Up</a></li>
+        </li>
       </ul>
     </div>
   </nav>
