--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -7,15 +7,14 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="#">Start Investing</a></li>
 			<li><a th:href="@{/companyregister}">Raise Capital</a></li>
-			<li><a href="#">Company</a></li>
+			<li><a th:href="@{/company/info}">Company</a></li>
 			<li><a href="#">Learn</a></li>
 		</ul>
 	</div>
 	<div class="right">
 		<ul>
-			<li sec:authorize="hasRole('Anonymous')"><a th:href="@{/login}">Login</a></li>
-			<li sec:authorize="hasRole('Anonymous')"><a
-				th:href="@{/register}">Sign Up</a></li>
+			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/login}">Login</a></li>
+			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}">Sign Up</a></li>
 
 			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')"><a th:href="@{/login}">portfolio</a></li>
 			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')"><a th:href="@{/logout}">logout</a></li>
