--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -67,6 +67,10 @@
                     <input class="register_input" type="number" placeholder=" per share price" name="price_per_share">
                 <br>
                 <div class="doc_file">
+					<div>
+                        <label for="companyimg">Company image</label>
+                        <input class="register_input" id="companypan" type="file" placeholder="Company image" name="com_image">
+                    </div>
                     <div>
                         <label for="pdfFile">Company Document PDF including tax clearance: </label>
                         <input class="register_input" id="pdfFile" type="file" placeholder="Company PDF" name="pdfFile">
