risk diversification chart

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -20,7 +20,7 @@
             <div class=" dashboard__container">
                 <div class="left__dashboard board">
                     <div>
-                        <a href="#">Dashboard</a>
+                        <a href="#">Sanolagani Dashboard</a>
                         <a href="#">My Information</a>
                         <div class="dropdown">
                             <button onclick="fundManagement()" class="drop-btn">Fund Management</button>
@@ -38,7 +38,7 @@
                 <div class="right__dashboard">
                     <div class="turnover board">
                         <h2>Welcome,User</h2>
-                        <a href="#">
+                        <a th:href="@{/riskinfo}">
                         <div>
                             <p>Total investment</p></a>
                             <p>0</p>
