templates cleaning and refactoring

--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -30,6 +30,7 @@
             </div>
         </div>
     </section>
+    <section th:replace="/fragment/footer :: footer"></section>
 </body>
 <script type="text/javascript">
     let again = document.getElementById("again");
