--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	 <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sanolagani</title>
-      <head th:replace="fragment/head.html :: headerfiles"></head>
-</head>
+
+<head th:insert="fragment/head.html :: headerfiles"></head>
 <body>
   <header class='container header__container' th:replace="fragment/header.html :: header"></header>
   <div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
