--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -5,19 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/Nav.css">
-  <link rel="stylesheet" type="text/css" href="css/Header.css">
-  <link rel="stylesheet" type="text/css" href="css/Home.css">
-  <link rel="stylesheet" type="text/css" href="css/HowToInvest.css">
-  <link rel="stylesheet" type="text/css" href="css/Footer.css">
-  <link rel="stylesheet" type="text/css" href="css/MostMomentum.css">
-  <link rel="stylesheet" type="text/css" href="css/MostFunded.css">
-  <link rel="stylesheet" type="text/css" href="css/Invest.css">
+<!--  <title th:replace="${title}">Sanolagani</title>-->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/otp.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/Nav.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/MostMomentum.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/MostFunded.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/LoginSignup.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/Invest.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/HowToInvest.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/Home.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/Header.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/Footer.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/company_registration.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/company_table.css}">
+
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" type="text/css" href="css/LoginSignup.css">
 </head>
 </html>
