--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,40 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <style>
-        #customers {
-            font-family: Arial, Helvetica, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        #customers td,
-        #customers th {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        #customers tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        #customers tr:hover {
-            background-color: #ddd;
-        }
-
-        #customers th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: var(--color-blue);
-            color: white;
-        }
-    </style>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/Home.css">
-    <link rel="stylesheet" href="css/Nav.css">
-    <link rel="stylesheet" href="css/company_table.css">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragment/head.html :: headerfiles">
 </head>
     <!-- main header -->
     <header class='container header__container'>
@@ -80,20 +46,20 @@
                     <th>Action</th>
                 </tr>
                 <tr th:each="detail: ${UnverfiedCompanies}">
-                    <td> <a th:text="${detail.companyname}"></a></td>
+                    <td> <a th:text="${#strings.abbreviate(detail.companyname, 20)}"></a></td>
                     <td> <a th:text="${detail.phnum}"></a></td>
-                    <td><a th:text="${detail.filename}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.pan_image_name}) }"></a></td>
+                    <td><a th:text="${#strings.abbreviate(detail.filename, 10)}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.pan_image_name}) }"></a></td>
                     <td><p th:text="${detail.timespanforraisingcapital}"></p></td>
                     <td><p th:text="${detail.price_per_share}" ></p></td>
                     <td><p th:text="${detail.raisedcapital}"></p></td>
                     <td>
-                        <a th:text="${detail.pan_image_name}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.pan_image_name}) }"></a>
+                        <a th:text="${#strings.abbreviate(detail.pan_image_name, 15)}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.pan_image_name}) }"></a>
                     </td>
                     <td>
-                        <a th:text="${detail.citizenship_fname}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.citizenship_fname}) }"></a>
+                        <a th:text="${#strings.abbreviate(detail.citizenship_fname,15)}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.citizenship_fname}) }"></a>
                     </td>
                     <td>
-                        <a th:text="${detail.citizenship_bname}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.citizenship_bname}) }"> </a>
+                        <a th:text="${#strings.abbreviate(detail.citizenship_bname, 15)}" th:href="@{D:\sanolagani\src\main\resources\images\{pan} (pan=${detail.citizenship_bname}) }"> </a>
                     </td>
                     <td>
                         <button type="submit" class="btn" th:onclick="|window.location.href='/tables/edit/save/${detail.id}'|">Add</button>
