--- a/src/main/resources/static/css/company_table.css
+++ b/src/main/resources/static/css/company_table.css
@@ -1,3 +1,31 @@
 .btn-danger{
     background: var(--color-red);
   }
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,
+th{
+    border: 1px solid #ddd;
+    padding: 2px;
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: var(--color-blue);
+    color: white;
+}
