--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -9,7 +9,8 @@
   <div class="container home__conatiner">
     <div class="home__left">
       <div class="heading__info">
-        <h1>Invest in Voklagyo</h1>
+        <h1>Invest in <span th:text="${company.companyname}"/></h1>
+
         <h5 class='gray'>Feeding the distanced customer with taste.</h5>
       </div>
 
@@ -18,13 +19,13 @@
       <p class='gray f-13'>This Reg A+ offering is made available through Sanolagani Primary.
         This investment is speculative, illiquid, and involves a high degree of
         risk, including possible loss of your entire investment. For more
-        information about this offering, please view Bhoklagyo’s Offering Circular
+        information about this offering, please view <span th:text="${company.companyname}"/>’s Offering Circular
         and Related Risks. In addition, as described in the Offering Circular,
         the Company retains the right to continue the offering beyond the Termination Date.
         in its sole discretion.</p>
     </div>
     <div class="home__right">
-      <img th:src="@{'/photos/voklagyoHome.png'}" alt="heading" />
+      <img th:src="@{/photos/{id}/{image} (image=${company.image}, id= ${company.id}) }" alt="heading" />
     </div>
   </div>
   <!-- Footer -->
