--- a/src/main/resources/templates/otp.html
+++ b/src/main/resources/templates/otp.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:include="fragment/head.html :: headerfiles">
 
-    <link rel="stylesheet" href="css/otp.css">
-</head>
 
 <body>
     <!-- main header -->
