--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,15 +13,12 @@
 	<section class='momentum__section'>
 		<div class="container momentum__container">
 			<h2>Most momentum</h2>
-			<h5>Offerings that have raised the highest money </h5>
-
+			<h5>Offerings that have raised the highest money</h5>
 			<div class="cards row">
-
-				<div class="card " th:each="company : ${companybasedoncapital}">
-					<p th:text="${company.previouslyraisedcapital}"></p>
-					
+				<div class="card " th:each="companycap : ${companybasedoncapital}" >
+				
 					<a href=""> <img
-						th:src="@{'/unverified_details/'+'unverified_details'+${company.image}}" 
+						th:src="@{'/unverified_details/'+'unverified_details'+${companycap.image}}"
 						class='card__image' alt="card-image" />
 						<h3>Timeplast</h3>
 					</a>
@@ -29,15 +26,15 @@
 
 					<div class="card__score">
 						<div class="raised">
-							<h3 th:text="${company.previouslyraisedcapital}"></h3>
+							<h3 th:text="${companycap.previouslyraisedcapital}"></h3>
 							<p class='desc'>Raised</p>
 						</div>
-					<div class="investers">
-							<h3 th:text="${company.companyname}"></h3>
+						<div class="investers">
+							<h3 th:text="${companycap.companyname}"></h3>
 							<p class='desc'>CompanyName</p>
 						</div>
 						<div class="min__investment">
-							<h3 th:text="${company.maximum_quantity}" />
+							<h3 th:text="${companycap.maximum_quantity}"></h3>
 							<p class='desc'>Min. Investment</p>
 						</div>
 					</div>
@@ -47,7 +44,7 @@
 					</div>
 				</div>
 			</div>
-			</div>
+		</div>
 	</section>
 
 	<!-- Most Funded -->
@@ -58,9 +55,9 @@
 				days</h5>
 
 			<div class="cards row">
-							<div class="card " th:each="company : ${companybasedondate}">
+				<div class="card " th:each="company : ${companybasedondate}">
 					<a href=""> <img
-						th:src="@{'/unverified_details/'+'unverified_details'+${company.image}}" 
+						th:src="@{'/unverified_details/'+'unverified_details'+${company.image}}"
 						class='card__image' alt="card-image" />
 						<h3>Timeplast</h3>
 					</a>
@@ -68,7 +65,7 @@
 
 					<div class="card__score">
 						<div class="raised">
-							<h3 th:text="${company.previouslyraisedcapital}" />
+							<h3 th:text="${company.previouslyraisedcapital}"></h3>
 							<p class='desc'>Raised</p>
 						</div>
 						<div class="investers">
@@ -127,7 +124,5 @@
 			</div>
 		</div>
 	</section>
-
-
 </body>
 </html>
