--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -55,12 +55,12 @@
 				</div>
 				<div>
 					<input class="register_input" type="text" placeholder=" sector"
-						name="sector" th:field="*{sector}"> < <input
+						name="sector" th:field="*{sector}"><input
 						class="register_input" type="number"
 						placeholder=" maximum quantity" name="maximum_quantity">
 				</div>
 
-<<<<<<< HEAD
+
 					<div>
                         <label for="companypan">Company image</label>
                         <input class="register_input" id="companypan" type="file" placeholder="Company image" name="com_image">
