creating documents folder

--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -52,11 +52,11 @@
 						class="register_input" type="text" placeholder="Last Name"
 						name="lname" th:field="*{lname}">
 				</div>
-				<input class="register_input register_input_full" type="text"
+				<input class="register_input" type="text"
 					placeholder="Company Name" name="companyname"
 					th:field="*{companyname}">
-
-
+				<input class="register_input" type="text"
+					placeholder="Company Adress" name="address">	
 				<div>
 					<input class="register_input" type="email"
 						placeholder="Company Email" name="email" th:field="*{email}">
@@ -71,7 +71,7 @@
 				</div>
 				<div>
 					<input class="register_input" type="text" placeholder=" sector"
-						name="sector" th:field="*{sector}"> < <input
+						name="sector" th:field="*{sector}"><input
 						class="register_input" type="number"
 						placeholder=" maximum quantity" name="maximum_quantity">
 				</div>
@@ -84,7 +84,7 @@
 					name="timespanforraisingcapital"
 					th:field="*{timespanforraisingcapital}"> <input
 					class="register_input" type="number" placeholder=" per share price"
-					name="price_per_share" th:field="*{price_per_share}"> <br>
+					name="price_per_share"> <br>
 
 				
 				<div class="doc_file">
