--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -14,7 +14,7 @@
         <h5 class='gray'>Feeding the distanced customer with taste.</h5>
       </div>
 
-      <a href="#" class='btn mt-20 mb-20'> Invest Now</a>
+      <a th:href="@{'/company/details/'+${company.id}+'/'}" class='btn mt-20 mb-20'> Invest Now</a>
 
       <p class='gray f-13'>This Reg A+ offering is made available through Sanolagani Primary.
         This investment is speculative, illiquid, and involves a high degree of
