--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,13 +49,13 @@
 	<!-- Most Funded -->
 	<section class='mostfunded__section'>
 		<div class="container mostfunded__container">
-			<h2>Most momentum</h2>
+			<h2>Most Funded</h2>
 			<h5>Offerings that have raised the most money in the last few
 				days</h5>
 
 			<div class="cards row">
 				<div class="card " th:each="company : ${companybasedondate}">
-					<a href=""> <img th:src="@{'../documents/'+${company.id}+'/'+${company.image}}"
+					<a th:href="@{'/company/'+${company.id}+'/'}"> <img th:src="@{'../documents/'+${company.id}+'/'+${company.image}}"
 						class='card__image' alt="card-image" />
 						<h3>Timeplast</h3>
 					</a>
@@ -85,6 +85,85 @@
 			</div>
 		</div>
 	</section>
+	
+	<!-- Recommend For Diversification -->
+	<section class='momentum__section' sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')">
+		<div class="container momentum__container">
+			<h2>Diversification</h2>
+			<h5>Recommend companies based on Diversification</h5>
+			<div class="cards row">
+
+				<div class="card " th:each="company : ${diversifiedcompanylist}">
+					<a th:href="@{'/company/'+${company.id}+'/'}"> <img th:src="@{'../documents/'+${company.id}+'/'+${company.image}}"
+						class='card__image' alt="card-image" />
+						<h3>Timeplast</h3>
+					</a>
+
+					<p class='desc'>The palstic that completely disintegrate...</p>
+
+					<div class="card__score">
+						<div class="raised">
+							<h3 th:text="${company.previouslyraisedcapital}"></h3>
+							<p class='desc'>Raised</p>
+						</div>
+						<div class="investers">
+							<h3 th:text="${company.companyname}"></h3>
+							<p class='desc'>CompanyName</p>
+						</div>
+						<div class="min__investment">
+							<h3 th:text="${company.maximum_quantity}" />
+							<p class='desc'>Min. Investment</p>
+						</div>
+
+					</div>
+
+					<div class="division">
+						<p>Reg CF via Sanolagani Capital, Ltd.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<!-- Recommend based on feedback -->
+	<section class='momentum__section' sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')">
+		<div class="container momentum__container">
+			<h2>Feedback</h2>
+			<h5>Recommend companies based on feedback</h5>
+			<div class="cards row">
+
+				<div class="card " th:each="company : ${c_list}">
+					<a th:href="@{'/company/'+${company.id}+'/'}"> <img th:src="@{'../documents/'+${company.id}+'/'+${company.image}}"
+						class='card__image' alt="card-image" />
+						<h3>Timeplast</h3>
+					</a>
+
+					<p class='desc'>The palstic that completely disintegrate...</p>
+
+					<div class="card__score">
+						<div class="raised">
+							<h3 th:text="${company.previouslyraisedcapital}"></h3>
+							<p class='desc'>Raised</p>
+						</div>
+						<div class="investers">
+							<h3 th:text="${company.companyname}"></h3>
+							<p class='desc'>CompanyName</p>
+						</div>
+						<div class="min__investment">
+							<h3 th:text="${company.maximum_quantity}" />
+							<p class='desc'>Min. Investment</p>
+						</div>
+
+					</div>
+
+					<div class="division">
+						<p>Reg CF via Sanolagani Capital, Ltd.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 	<!-- How to Invest -->
 	<section class='howtoinvest'>
