financial document parsing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
 					<div class="card__score">
 						<div class="raised">
-							<h3 th:text="Rs{#numbers.formatCurrency(company.previouslyraisedcapital)}" />
+							<h3>Rs. [[${#numbers.formatInteger(company.previouslyraisedcapital, 3, 'COMMA')}]]</h3>
 							<p class='desc'>Capital To Raise</p>
 						</div>
 						<div class="investers">
